--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preact": "^10.5.15"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.5",
     "@preact/preset-vite": "^2.1.5",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
